Updated: OMM chart.

--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -56,6 +56,7 @@
     "    xvar=\"category\",\n",
     "    e_yvar=\"exponent\",\n",
     "    m_yvar=\"mantissa\",\n",
+    "    v_var=\"original\",\n",
     "    w=400,\n",
     "    h=400,\n",
     "    m_color=\"#FA7051\",\n",
@@ -64,11 +65,31 @@
     "):\n",
     "    base = alt.Chart(data)\n",
     "\n",
-    "    e_bar = base.mark_bar(color=e_color).encode(x=alt.X(f\"{xvar}:N\"), y=alt.Y(f\"{e_yvar}:Q\"))\n",
-    "    \n",
-    "    m_bar = base.mark_bar(color=m_color, size=10).encode(x=alt.X(f\"{xvar}:N\"), y=alt.Y(f\"{m_yvar}:Q\"))\n",
+    "    e_bar = base.mark_bar(color=e_color).encode(\n",
+    "        x=alt.X(f\"{xvar}:N\", axis=alt.Axis(title=xvar.capitalize())),\n",
+    "        y=alt.Y(\n",
+    "            f\"{e_yvar}:Q\", axis=alt.Axis(title=None), scale=alt.Scale(domain=[0, 10])\n",
+    "        ),\n",
+    "        tooltip=[\n",
+    "            alt.Tooltip(f\"{xvar}:N\", title=xvar.capitalize()),\n",
+    "            alt.Tooltip(f\"{e_yvar}:Q\", title=e_yvar.capitalize()),\n",
+    "            alt.Tooltip(f\"{v_var}:N\", title=\"Value\"),\n",
+    "        ],\n",
+    "    )\n",
     "\n",
-    "    return alt.layer(e_bar, m_bar).properties(width=w, height=h)\n",
+    "    m_bar = base.mark_bar(color=m_color, size=10).encode(\n",
+    "        x=alt.X(f\"{xvar}:N\"),\n",
+    "        y=alt.Y(f\"{m_yvar}:Q\"),\n",
+    "        tooltip=[\n",
+    "            alt.Tooltip(f\"{xvar}:N\", title=xvar.capitalize()),\n",
+    "            alt.Tooltip(f\"{m_yvar}:Q\", title=m_yvar.capitalize()),\n",
+    "            alt.Tooltip(f\"{v_var}:N\", title=\"Value\"),\n",
+    "        ],\n",
+    "    )\n",
+    "\n",
+    "    return alt.layer(\n",
+    "        e_bar, m_bar, title=alt.TitleParams(title, anchor=\"start\")\n",
+    "    ).properties(width=w, height=h)\n",
     "\n",
     "\n",
     "omm_chart(data)"
