Updated: OMM chart bar size.

--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -63,9 +63,16 @@
     "    e_color=\"#707070\",\n",
     "    title=\"Order of Magnitude Markers\",\n",
     "):\n",
+    "    _n_bars = len(data[xvar].unique())\n",
+    "    \n",
+    "    # Default `bandPaddingInner` = 0.1\n",
+    "    # More info: https://altair-viz.github.io/user_guide/configuration.html#scale-configuration\n",
+    "    _e_bar_width = (w / _n_bars) - ((w / _n_bars) * 0.1)\n",
+    "    _m_bar_width = _e_bar_width / 5\n",
+    "    \n",
     "    base = alt.Chart(data)\n",
     "\n",
-    "    e_bar = base.mark_bar(color=e_color).encode(\n",
+    "    e_bar = base.mark_bar(color=e_color, size=_e_bar_width).encode(\n",
     "        x=alt.X(f\"{xvar}:N\", axis=alt.Axis(title=xvar.capitalize())),\n",
     "        y=alt.Y(\n",
     "            f\"{e_yvar}:Q\", axis=alt.Axis(title=None), scale=alt.Scale(domain=[0, 10])\n",
@@ -77,7 +84,7 @@
     "        ],\n",
     "    )\n",
     "\n",
-    "    m_bar = base.mark_bar(color=m_color, size=10).encode(\n",
+    "    m_bar = base.mark_bar(color=m_color, size=_m_bar_width).encode(\n",
     "        x=alt.X(f\"{xvar}:N\"),\n",
     "        y=alt.Y(f\"{m_yvar}:Q\"),\n",
     "        tooltip=[\n",
