Updated: OMM Chart and SSB Char bug fix.

--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -10,7 +10,7 @@
     "%autoreload 2\n",
     "\n",
     "from utils import load_data\n",
-    "from charts import ssb_chart\n",
+    "from charts import ssb_chart, omm_chart\n",
     "from theme import set_alt_aesthetic"
    ]
   },
@@ -48,57 +48,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import altair as alt\n",
-    "\n",
-    "\n",
-    "def omm_chart(\n",
-    "    data,\n",
-    "    xvar=\"category\",\n",
-    "    e_yvar=\"exponent\",\n",
-    "    m_yvar=\"mantissa\",\n",
-    "    v_var=\"original\",\n",
-    "    w=400,\n",
-    "    h=400,\n",
-    "    m_color=\"#FA7051\",\n",
-    "    e_color=\"#707070\",\n",
-    "    title=\"Order of Magnitude Markers\",\n",
-    "):\n",
-    "    _n_bars = len(data[xvar].unique())\n",
-    "    \n",
-    "    # Default `bandPaddingInner` = 0.1\n",
-    "    # More info: https://altair-viz.github.io/user_guide/configuration.html#scale-configuration\n",
-    "    _e_bar_width = (w / _n_bars) - ((w / _n_bars) * 0.1)\n",
-    "    _m_bar_width = _e_bar_width / 5\n",
-    "    \n",
-    "    base = alt.Chart(data)\n",
-    "\n",
-    "    e_bar = base.mark_bar(color=e_color, size=_e_bar_width).encode(\n",
-    "        x=alt.X(f\"{xvar}:N\", axis=alt.Axis(title=xvar.capitalize())),\n",
-    "        y=alt.Y(\n",
-    "            f\"{e_yvar}:Q\", axis=alt.Axis(title=None), scale=alt.Scale(domain=[0, 10])\n",
-    "        ),\n",
-    "        tooltip=[\n",
-    "            alt.Tooltip(f\"{xvar}:N\", title=xvar.capitalize()),\n",
-    "            alt.Tooltip(f\"{e_yvar}:Q\", title=e_yvar.capitalize()),\n",
-    "            alt.Tooltip(f\"{v_var}:N\", title=\"Value\"),\n",
-    "        ],\n",
-    "    )\n",
-    "\n",
-    "    m_bar = base.mark_bar(color=m_color, size=_m_bar_width).encode(\n",
-    "        x=alt.X(f\"{xvar}:N\"),\n",
-    "        y=alt.Y(f\"{m_yvar}:Q\"),\n",
-    "        tooltip=[\n",
-    "            alt.Tooltip(f\"{xvar}:N\", title=xvar.capitalize()),\n",
-    "            alt.Tooltip(f\"{m_yvar}:Q\", title=m_yvar.capitalize()),\n",
-    "            alt.Tooltip(f\"{v_var}:N\", title=\"Value\"),\n",
-    "        ],\n",
-    "    )\n",
-    "\n",
-    "    return alt.layer(\n",
-    "        e_bar, m_bar, title=alt.TitleParams(title, anchor=\"start\")\n",
-    "    ).properties(width=w, height=h)\n",
-    "\n",
-    "\n",
     "omm_chart(data)"
    ]
   },
