Added: WSB Chart.

--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -10,7 +10,7 @@
     "%autoreload 2\n",
     "\n",
     "from utils import load_data\n",
-    "from charts import ssb_chart, omm_chart\n",
+    "from charts import ssb_chart, omm_chart, wsb_chart\n",
     "from theme import set_alt_aesthetic"
    ]
   },
@@ -49,6 +49,15 @@
    "outputs": [],
    "source": [
     "omm_chart(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wsb_chart(data)"
    ]
   },
   {
