Updated: formatLocale, Linear and Log Bar Charts, and OMM paper reference.

--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -10,7 +10,7 @@
     "%autoreload 2\n",
     "\n",
     "from utils import load_data\n",
-    "from charts import ssb_chart, omm_chart, wsb_chart\n",
+    "from charts import ssb_chart, omm_chart, wsb_chart, bar_chart\n",
     "from theme import set_alt_aesthetic"
    ]
   },
@@ -39,6 +39,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "bar_chart(data, yscale=\"linear\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bar_chart(data, yscale=\"log\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "ssb_chart(data)"
    ]
   },
@@ -59,13 +77,6 @@
    "source": [
     "wsb_chart(data)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
