--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -1,9 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Data Visualization Show & Tell @Feedzai\n",
+    "\n",
+    "# [Width-Scale Bar Charts for Data with Large Value Range](https://diglib.eg.org/handle/10.2312/evs20201056)\n",
+    "\n",
+    "M. Höhn, M. Wunderlich, K. Ballweg, T. von Landesberger"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -17,7 +36,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [],
    "source": [
     "set_alt_aesthetic()"
@@ -26,7 +49,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "data = load_data(show_unicode=True)\n",
@@ -36,7 +63,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "bar_chart(data, yscale=\"linear\")"
@@ -45,7 +76,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "bar_chart(data, yscale=\"log\")"
@@ -54,7 +89,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "ssb_chart(data)"
@@ -63,7 +102,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "omm_chart(data)"
@@ -72,7 +115,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "wsb_chart(data)"
@@ -80,6 +127,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -96,6 +144,12 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.10"
+  },
+  "rise": {
+   "auto_select": "none",
+   "controls": false,
+   "enable_chalkboard": false,
+   "slideNumber": "c/t"
   }
  },
  "nbformat": 4,
