Updated: Charts and presentation.

--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -28,8 +28,8 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "from utils import load_data, show_population\n",
-    "from charts import ssb_chart, omm_chart, wsb_chart, bar_chart\n",
+    "from utils import load_data\n",
+    "from charts import ssb_chart, omm_chart, wsb_chart, bar_chart, show_population, show_log_error\n",
     "from theme import set_alt_aesthetic"
    ]
   },
@@ -67,11 +67,11 @@
     }
    },
    "source": [
-    "# Motivation\n",
+    "# 💪 Motivation\n",
     "\n",
-    "Datasets with a wide range of values (bar heights) can be difficult to visualize through linear bar charts.\n",
+    "Datasets with a wide range of values (bar heights ▂▁▇) can be difficult to visualize through linear bar charts.\n",
     "\n",
-    "So, let's try to improve the readibility of the values with a new design for bar charts!"
+    "So, let's try to improve the **readibility** of the values with a new design for bar charts!"
    ]
   },
   {
@@ -82,9 +82,24 @@
     }
    },
    "source": [
-    "# Width-Scale Bar Chart design\n",
+    "# 💪 Motivation\n",
     "\n",
-    "- Each value ($v$) is divided into two parts — mantissa ($m$) and exponent ($e$) — that follow scientific notation: $v = m \\times 10^e$"
+    "Personally, I found the idea of dividing numbers into several encodings (spoiler!) quite interesting and *simple*.\n",
+    "\n",
+    "The focus of this presentation will be on the bar chart designs contained in this paper."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# 🎨 Width-Scale Bar Chart\n",
+    "\n",
+    "- Each value ($v$) is divided into two parts — mantissa ($m$) and exponent ($e$) — that follow scientific notation: $v = m \\times 10^e$ (w/ $1 \\leq m < 10$ and $e \\in \\mathbb{Z}$ a.k.a. set of integers)"
    ]
   },
   {
@@ -95,7 +110,7 @@
     }
    },
    "source": [
-    "- 3 visual variables: width, height, and color"
+    "- 3 visual variables: height, width, and color"
    ]
   },
   {
@@ -106,7 +121,81 @@
     }
    },
    "source": [
-    "- Here"
+    "- $m$ is mapped to the height"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- The domain of the Y-axis is [0, 10]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# 🎨 Width-Scale Bar Chart\n",
+    "\n",
+    "- $e$ is mapped to both the width and the color (double encoding)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- Larger $e$ are represented by darker colors and wider bar width"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# 🎨 Width-Scale Bar Chart\n",
+    "\n",
+    "- For color, a yellow-orange (or orange-red?) sequential multi-hue scheme is used"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- The authors pointed out two reasons for this choice:\n",
+    "\n",
+    "- (1) Our visual system has maximum sensitivity to changes in luminance (perceived brightness) in this type of scheme\n",
+    "\n",
+    "- (2) This type of scheme is colorblind-friendly (*contrast* is achieved)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- **Off-topic**: The [*colorspace*](http://colorspace.r-forge.r-project.org/index.html) R package is a great resource for learning about color"
    ]
   },
   {
@@ -134,6 +223,24 @@
    "outputs": [],
    "source": [
     "wsb_chart(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# 📝 Evaluation\n",
+    "\n",
+    "This design was contrasted with the following designs:\n",
+    "\n",
+    "- Linear Bar Chart (LIN)\n",
+    "- Log Bar Chart (LOG)\n",
+    "- Order of Magnitude Markers (OMM)\n",
+    "- Scale-Stack Bar Chart (SSB)"
    ]
   },
   {
@@ -183,7 +290,87 @@
     }
    },
    "source": [
-    "# Evaluation"
+    "# 📝 Evaluation\n",
+    "\n",
+    "- Data: $0 < e \\leq 4$\n",
+    "- Number of participants: 136 (-21 = 115)\n",
+    "- Between-subject study: 1 design × 4 tasks × 6 repetitions = 24 tasks per participant\n",
+    "- Metrics: log error ($e_{log} = log_{10}(\\frac{response_{v}}{encoded_{v}})$) for the _Value_ and _Ratio_ tasks, binary error ($1 - accuracy$) for the _Sort_ and _Trend_ tasks, and response time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "show_log_error()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "\n",
+    "# 📝 Evaluation\n",
+    "\n",
+    "**Tasks**:\n",
+    "\n",
+    "- Value: \"read the value\"\n",
+    "- Sort: \"sort all values in ascending order\"\n",
+    "- Ratio: \"determine the ratio of two values\"\n",
+    "- Trend: \"identify the trend in the data from the choice of linear, a logarithmic or an exponential, or none\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Let's take a look..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "<figure>\n",
+    "  <img src=\"study-results-hohn_et_al_2020.png\" alt=\"Evaluation results\" style=\"width:95%\">\n",
+    "  <figcaption>Source: Höhn et al., 2020</figcaption>\n",
+    "</figure>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# 💯 Results\n",
+    "\n",
+    "Ranking:\n",
+    "\n",
+    "- Value: **WSB**≺LOG≺OMM≼LIN≺SSB\n",
+    "- Sort: SSB≼**WSB**≼LOG≼OMM≺LIN\n",
+    "- Ratio: SSB≼**WSB**≺LOG≼OMM≺LIN\n",
+    "- Trend: LIN≼SSB≺**WSB**≺OMM≼LOG"
    ]
   },
   {
